--- a/ml_model.ipynb
+++ b/ml_model.ipynb
@@ -2,42 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.2.2)\n",
-      "Requirement already satisfied: numpy in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.26.4)\n",
-      "Requirement already satisfied: pillow in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (10.1.0)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.3.2)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (4.66.2)\n",
-      "Requirement already satisfied: decord in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.6.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: scipy>=1.5.0 in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-learn) (1.11.4)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-learn) (1.3.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-learn) (3.2.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\skipz\\appdata\\roaming\\python\\python312\\site-packages (from tqdm) (0.4.6)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\skipz\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Looking in indexes: https://download.pytorch.org/whl/cu126\n",
-      "Requirement already satisfied: torch in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.2.1+cu121)\n",
-      "Requirement already satisfied: torchvision in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.17.1+cu121)\n",
-      "Requirement already satisfied: torchaudio in c:\\users\\skipz\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.2.1+cu121)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement torchcodec (from versions: none)\n",
-      "ERROR: No matching distribution found for torchcodec\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! pip install pandas numpy pillow scikit-learn tqdm decord\n",
     "! pip3 install torch torchvision torchaudio torchcodec --index-url https://download.pytorch.org/whl/cu126"
@@ -45,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +90,6 @@
     "        return len(self.annotations)\n",
     "    \n",
     "    def get_clips(self, clips: list[range]):\n",
-    "        # Clip off the start & end frames because sometimes invalid frames are selected\n",
     "        frames = self.cap.get_batch([i for clip in clips for i in clip])\n",
     "        frames = frames.data[:, :, :, 0] / (255 / 2) - 1\n",
     "        \n",
@@ -321,12 +287,12 @@
     "\n",
     "handles = []\n",
     "\n",
-    "# # Apply Xavier initialization\n",
-    "# def initialize_weights(m):\n",
-    "#     if isinstance(m, nn.Linear):\n",
-    "#         torch.nn.init.xavier_uniform_(m.weight)\n",
-    "#         if m.bias is not None:\n",
-    "#             torch.nn.init.zeros_(m.bias)\n",
+    "# Apply Xavier initialization\n",
+    "def initialize_weights(m):\n",
+    "    if isinstance(m, nn.Linear):\n",
+    "        torch.nn.init.xavier_uniform_(m.weight)\n",
+    "        if m.bias is not None:\n",
+    "            torch.nn.init.zeros_(m.bias)\n",
     "\n",
     "for child in model.children():\n",
     "    if child.children():\n",
